compilers/python3/runs/run-1/run.stderr
  File "./source.py", line 2
    using namespace std;
                  ^
SyntaxError: invalid syntax
